new computation and citation added

--- a/Report/references.bib
+++ b/Report/references.bib
@@ -9,3 +9,58 @@
   doi     = {DOI},
   url     = {URL},
 }
+
+@site{ElectricityCost,
+  title   = {European wholesale electricity price data},
+  url     = {https://ember-climate.org/data-catalogue/european-wholesale-electricity-price-data/},
+}
+
+@site{ProphetSite,
+  title   = {Prophet, forecasting at scale},
+  url     = {https://facebook.github.io/prophet/},
+}
+
+@book{Prophet1,
+  author  = {Andrew C. Harvey, Neil Shephard},
+  title   = {10 Structural time series models},
+  year    = {1993},
+  url     = {https://www.sciencedirect.com/science/article/abs/pii/S0169716105800458?via%3Dihub},
+}
+
+@article{example,
+  author  = {Sean J Taylor​​, Benjamin Letham​},
+  title   = {Forecasting at scale},
+  year    = {2017},
+  doi     = {10.7287/peerj.preprints.3190v2},
+  url     = {https://peerj.com/preprints/3190v2/},
+}
+
+@site{STL,
+  title   = {Decomposizione Trend-Stagionale attraverso l'utilizzo del LOESS},
+  url     = {https://doc.arcgis.com/it/insights/latest/analyze/stl.htm},
+}
+
+@site{ElectricityMap,
+  title   = {ELECTRICITY MAPS},
+  url     = {https://www.electricitymaps.com/data-portal/italy},
+}
+
+@book{CarbonIntensity,
+  author  = {Jonas Nässén, John Holmberg, Anders Wadeskog, Madeleine Nyman},
+  title   = {Direct and indirect energy use and carbon emissions in the production phase of buildings: An input–output analysis},
+  year    = {2007},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0360544207000163?via%3Dihub},
+}
+
+@site{DataCenter,
+  title   = {Data Center Racks, Cabinets, and Cages: An In-Depth Guide},
+  url     = {https://dgtlinfra.com/data-center-racks-cabinets-cages/},
+}
+
+@article{MarconiM100,
+  author  = {Andrea Borghesi, Carmine Di Santi, Martin Molan, Mohsen Seyedkazemi Ardebili, Alessio Mauri, Massimiliano Guarrasi, Daniela Galetti, Mirko Cestari, Francesco Barchi, Luca Benini, Francesco Beneventi & Andrea Bartolini},
+  title   = {M100 ExaData: a data collection campaign on the CINECA’s Marconi100 Tier-0 supercomputer},
+  year    = {2023},
+  doi     = {https://doi.org/10.1038/s41597-023-02174-3},
+  url     = {https://www.nature.com/articles/s41597-023-02174-3},
+}
