--- a/Energy_Saving_computation.ipynb
+++ b/Energy_Saving_computation.ipynb
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "[21102 rows x 20 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
        "Length: 21102, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "[21102 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
        "[15263 rows x 1 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1521,6 +1521,31 @@
     "CO2_saved = CO2_saved * dataset_CI['LCA+direct']\n",
     "\n",
     "print(f'Again, this approach might have avoided the production of {(CO2_saved.sum(axis=0)/1000):.2f} kg of equivalent CO2 for the past 21 months')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In the previous 21 months there have been produced 155918.28 kg of equivalent CO2, meaning we might have avoided to produce the 16.46 % of it\n",
+      "In this 2.5 years we probably spent 54243.03 euro in energy usage, meaning we might have saved 18.13 % of it with our approach\n"
+     ]
+    }
+   ],
+   "source": [
+    "# COMPARISON WITH TOTAL INITIAL VALUE:\n",
+    "TOT_init_cost = (dataset_E_nodes.sum(axis=1) / 1000 * dataset_E_cost['Price (EUR/MWhe)']).sum(axis=0)\n",
+    "\n",
+    "dataset_E_nodes = dataset_E_nodes[(dataset_E_nodes.index >= '2021-01-01 00:00:00')]\n",
+    "TOT_init_emission = (dataset_E_nodes.sum(axis=1) * dataset_CI['LCA+direct']).sum(axis=0) / 1000\n",
+    "\n",
+    "print(f'In the previous 21 months there have been produced {TOT_init_emission:.2f} kg of equivalent CO2, meaning we might have avoided to produce the {(CO2_saved.sum(axis=0)/10) / TOT_init_emission:.2f} % of it')\n",
+    "print(f'In this 2.5 years we probably spent {TOT_init_cost:.2f} euro in energy usage, meaning we might have saved {E_saved_2 * 100 / TOT_init_cost:.2f} % of it with our approach')"
    ]
   }
  ],
