--- a/Report/references.bib
+++ b/Report/references.bib
@@ -57,10 +57,15 @@
   url     = {https://dgtlinfra.com/data-center-racks-cabinets-cages/},
 }
 
-@article{MarconiM100,
+@article{Marconi100,
   author  = {Andrea Borghesi, Carmine Di Santi, Martin Molan, Mohsen Seyedkazemi Ardebili, Alessio Mauri, Massimiliano Guarrasi, Daniela Galetti, Mirko Cestari, Francesco Barchi, Luca Benini, Francesco Beneventi & Andrea Bartolini},
   title   = {M100 ExaData: a data collection campaign on the CINECA’s Marconi100 Tier-0 supercomputer},
   year    = {2023},
   doi     = {https://doi.org/10.1038/s41597-023-02174-3},
   url     = {https://www.nature.com/articles/s41597-023-02174-3},
+}
+
+@site{Marconi100Site,
+  title   = {Marconi 100 | HPC CINECA},
+  url     = {https://www.hpc.cineca.it/systems/hardware/marconi100/},
 }
