new names for chapters

--- a/Report/Sections/4_Power_analysis.tex
+++ b/Report/Sections/4_Power_analysis.tex
@@ -1,4 +1,4 @@
-\section{Carbon Intensity}
+\section{Power analysis}
 \noindent
 
 The distribution of avaialble data is in the range of 3 years from January 2021 to January 2024. Analysis of the data demonstrates the seasonality, which makes the data generally predictable. The available data includes the carbon intensity of LCA and Direct. \textcolor{red}{elaborate LCA/Direct}
