--- a/Report/main.tex
+++ b/Report/main.tex
@@ -30,10 +30,10 @@
 \input{./Sections/2_Tools}
 \pagebreak
 
-\input{./Sections/4_CI-COP}
+\input{./Sections/3_Carbon_Intensity_analysis}
 \pagebreak
 
-\input{./Sections/3_PowerEnergy}
+\input{./Sections/4_Power_analysis}
 \pagebreak
 
 \input{./Sections/5_Conclusion}
