--- a/Report/Sections/5_Conclusion.tex
+++ b/Report/Sections/5_Conclusion.tex
@@ -1,4 +1,7 @@
 \section{Conclusion?}
 \noindent
 
-\textcolor{red}{???}
+As a result of the data analysis of power consumption and carbon emissions, we can yield a valuable insights and future recommendations.
+The usage of predictive model (Meta’s Prophet) to perform time series predicition of Carbon Intensity has demonstrated an efficiency in forecasting by leveraging historical data and hyperparameters, compared to simple lightweight model.
+The usage of such predictive model potentially can allow to implement proactive measures to reduce the effect of heavy computations, such as building a task scheduler with consideration of realtime Carbon Intensity data, or modeling of the carbon footprint of the given task.
+As per power profiling, the analysis of power consumption along the nodes demonstrated a correlation between temperature and energy usage, and it has been estimated that using the task scheduler with tracking this realtime data  can potentially allow to reduce the electricity usage, hence, the expenses, and most importantly, reduce the $CO_2$ emissions.
