--- a/Report/main.tex
+++ b/Report/main.tex
@@ -5,9 +5,8 @@
 
 \usepackage{./Layout/EngReport}
 
-\graphicspath{{../../PLOTS/}}
+\graphicspath{{Figures/}}
 \onehalfspacing
-\graphicspath{../../PLOTS/}
 \geometry{letterpaper, portrait, includeheadfoot=true, hmargin=0.5in, vmargin=0.5in}
 
 %\fontsize{font size}{vertsize (usually 1.2x)}\selectfont
@@ -20,7 +19,7 @@
 \tableofcontents
 \pagebreak
 
-\fontsize{12}{12}\selectfont{
+\fontsize{12}{12}\selectfont
 \input{./Sections/0_Abstract}
 \pagebreak
 
@@ -40,7 +39,5 @@
 \pagebreak
 
 \printbibliography
-
-}
 
 \end{document}
