--- a/Report/references.bib
+++ b/Report/references.bib
@@ -10,12 +10,12 @@
   url     = {URL},
 }
 
-@site{ElectricityCost,
+@online{ElectricityCost,
   title   = {European wholesale electricity price data},
   url     = {https://ember-climate.org/data-catalogue/european-wholesale-electricity-price-data/},
 }
 
-@site{ProphetSite,
+@online{ProphetSite,
   title   = {Prophet, forecasting at scale},
   url     = {https://facebook.github.io/prophet/},
 }
@@ -27,7 +27,7 @@
   url     = {https://www.sciencedirect.com/science/article/abs/pii/S0169716105800458?via%3Dihub},
 }
 
-@article{example,
+@article{Prophet2,
   author  = {Sean J Taylor​​, Benjamin Letham​},
   title   = {Forecasting at scale},
   year    = {2017},
@@ -35,12 +35,12 @@
   url     = {https://peerj.com/preprints/3190v2/},
 }
 
-@site{STL,
+@online{STL,
   title   = {Decomposizione Trend-Stagionale attraverso l'utilizzo del LOESS},
   url     = {https://doc.arcgis.com/it/insights/latest/analyze/stl.htm},
 }
 
-@site{ElectricityMap,
+@online{ElectricityMap,
   title   = {ELECTRICITY MAPS},
   url     = {https://www.electricitymaps.com/data-portal/italy},
 }
@@ -52,7 +52,7 @@
   url     = {https://www.sciencedirect.com/science/article/pii/S0360544207000163?via%3Dihub},
 }
 
-@site{DataCenter,
+@online{DataCenter,
   title   = {Data Center Racks, Cabinets, and Cages: An In-Depth Guide},
   url     = {https://dgtlinfra.com/data-center-racks-cabinets-cages/},
 }
@@ -65,7 +65,7 @@
   url     = {https://www.nature.com/articles/s41597-023-02174-3},
 }
 
-@site{Marconi100Site,
+@online{Marconi100Site,
   title   = {Marconi 100 | HPC CINECA},
   url     = {https://www.hpc.cineca.it/systems/hardware/marconi100/},
 }
