--- a/Report/Sections/1_Intro.tex
+++ b/Report/Sections/1_Intro.tex
@@ -21,5 +21,5 @@ This work mainly focuses on the data related to power utilization and temperatur
 The data on Carbon Intensity is provided by ElectricityMaps, which provides carbon intensity data coming from electricity consumption for more than 200 zones in the world.
 The Carbon Intensity metric measures the amount of how "clean" the electricity in a given zone at a given time, representing the grams of carbon dioxide ($CO_2$) in the atmosphere released per kilowatt hour (kWh).
 Particularly, for this work the Carbon Intensity data for the North Italy region was used.
-The dataset includes the carbon intensity of LCA and \textit{direct} \cite{CarbonIntensity} impacts, particularly, the LCA (Life-Cycle Assessment) data includes the "compiled" carbon intensity as related to all stages throughout the product’s life-cycle:
+The dataset includes the carbon intensity of \textit{LCA} and \textit{direct} \cite{CarbonIntensity} impacts, particularly, the LCA (Life-Cycle Assessment) data includes the "compiled" carbon intensity as related to all stages throughout the product’s life-cycle:
 from raw material extraction to production, usage, and disposal, while direct is related to the direct emissions during operation. For our work, we use LCA+Direct metrics.
