--- a/Report/references.bib
+++ b/Report/references.bib
@@ -1,18 +1,22 @@
-@article{example,
-  author  = {Author, A.},
-  title   = {Title of the Article},
-  journal = {Journal Name},
-  volume  = {Volume},
-  number  = {Issue},
-  pages   = {Page range},
-  year    = {Year},
-  doi     = {DOI},
-  url     = {URL},
-}
-
 @online{ElectricityCost,
   title   = {European wholesale electricity price data},
   url     = {https://ember-climate.org/data-catalogue/european-wholesale-electricity-price-data/},
+}
+
+@article{Marconi100,
+  title={M100 ExaData: a data collection campaign on the CINECA’s Marconi100 Tier-0 supercomputer},
+  author={Borghesi, Andrea and Di Santi, Carmine and Molan, Martin and Ardebili, Mohsen Seyedkazemi and Mauri, Alessio and Guarrasi, Massimiliano and Galetti, Daniela and Cestari, Mirko and Barchi, Francesco and Benini, Luca and others},
+  journal={Scientific Data},
+  volume={10},
+  number={1},
+  pages={288},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@online{Marconi100Site,
+  title   = {Marconi 100 HPC CINECA},
+  url     = {https://www.hpc.cineca.it/systems/hardware/marconi100/},
 }
 
 @online{ProphetSite,
@@ -28,7 +32,7 @@
 }
 
 @article{Prophet2,
-  author  = {Sean J Taylor​​, Benjamin Letham​},
+  author  = {Sean J Taylor, Benjamin Letham},
   title   = {Forecasting at scale},
   year    = {2017},
   doi     = {10.7287/peerj.preprints.3190v2},
@@ -45,27 +49,18 @@
   url     = {https://www.electricitymaps.com/data-portal/italy},
 }
 
-@book{CarbonIntensity,
-  author  = {Jonas Nässén, John Holmberg, Anders Wadeskog, Madeleine Nyman},
-  title   = {Direct and indirect energy use and carbon emissions in the production phase of buildings: An input–output analysis},
-  year    = {2007},
-  url     = {https://www.sciencedirect.com/science/article/pii/S0360544207000163?via%3Dihub},
+@article{CarbonIntensity,
+  title={Direct and indirect energy use and carbon emissions in the production phase of buildings: an input--output analysis},
+  author={N{\"a}ss{\'e}n, Jonas and Holmberg, John and Wadeskog, Anders and Nyman, Madeleine},
+  journal={Energy},
+  volume={32},
+  number={9},
+  pages={1593--1602},
+  year={2007},
+  publisher={Elsevier}
 }
 
 @online{DataCenter,
   title   = {Data Center Racks, Cabinets, and Cages: An In-Depth Guide},
   url     = {https://dgtlinfra.com/data-center-racks-cabinets-cages/},
-}
-
-@article{Marconi100,
-  author  = {Andrea Borghesi, Carmine Di Santi, Martin Molan, Mohsen Seyedkazemi Ardebili, Alessio Mauri, Massimiliano Guarrasi, Daniela Galetti, Mirko Cestari, Francesco Barchi, Luca Benini, Francesco Beneventi & Andrea Bartolini},
-  title   = {M100 ExaData: a data collection campaign on the CINECA’s Marconi100 Tier-0 supercomputer},
-  year    = {2023},
-  doi     = {https://doi.org/10.1038/s41597-023-02174-3},
-  url     = {https://www.nature.com/articles/s41597-023-02174-3},
-}
-
-@online{Marconi100Site,
-  title   = {Marconi 100 | HPC CINECA},
-  url     = {https://www.hpc.cineca.it/systems/hardware/marconi100/},
 }
