--- a/Report/Sections/5_Conclusion.tex
+++ b/Report/Sections/5_Conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion?}
+\section{Conclusion}
 \noindent
 
 As a result of the data analysis of power consumption and carbon emissions, we can yield a valuable insights and future recommendations.
